# ChangeLog for lxde-base/lxappearance
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/lxde-base/lxappearance/ChangeLog,v 1.35 2013/12/15 20:27:04 nullishzero Exp $

*lxappearance-0.5.3 (15 Dec 2013)

  15 Dec 2013; Pavel Kazakov <nullishzero@gentoo.org>
  +lxappearance-0.5.3.ebuild:
  Version bump (bug #494358)

  23 Feb 2013; Zac Medico <zmedico@gentoo.org> lxappearance-0.5.2.ebuild:
  Add ~arm-linux keyword.

  25 Aug 2012; Markos Chandras <hwoarang@gentoo.org> -lxappearance-0.2.1.ebuild,
  -lxappearance-0.4.0.ebuild, -lxappearance-0.5.0.ebuild,
  -lxappearance-0.5.1.ebuild:
  Remove old LXDE packages

  14 Aug 2012; Johannes Huber <johu@gentoo.org> lxappearance-0.5.2.ebuild:
  Stable for x86, wrt bug #430494

  11 Aug 2012; Agostino Sarubbo <ago@gentoo.org> lxappearance-0.5.2.ebuild:
  Stable for amd64, wrt bug #430494

  09 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
  lxappearance-0.5.2.ebuild:
  Stable arm, bug #430494

  09 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
  lxappearance-0.5.2.ebuild:
  Stable ppc, bug #430494

  05 Jun 2012; Michael Weber <xmw@gentoo.org> lxappearance-0.5.1.ebuild:
  ppc stable (bug 385189)

*lxappearance-0.5.2 (23 May 2012)

  23 May 2012; Markos Chandras <hwoarang@gentoo.org> +lxappearance-0.5.2.ebuild:
  Version bump

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> lxappearance-0.2.1.ebuild,
  lxappearance-0.4.0.ebuild, lxappearance-0.5.0.ebuild,
  lxappearance-0.5.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  09 Oct 2011; Markus Meier <maekke@gentoo.org> lxappearance-0.5.1.ebuild:
  arm stable, bug #385189

  07 Oct 2011; Markos Chandras <hwoarang@gentoo.org> lxappearance-0.5.1.ebuild:
  Stable on amd64 wrt bug #385189

  05 Oct 2011; Andreas Schuerch <nativemad@gentoo.org>
  lxappearance-0.5.1.ebuild:
  x86 stable, bug 385189

*lxappearance-0.5.1 (03 Aug 2011)

  03 Aug 2011; Markos Chandras <hwoarang@gentoo.org>
  +lxappearance-0.5.1.ebuild: