@@ -5,24 +5,26 @@ AUX lxappearance-0.2.1-intltool.patch 446 SHA256 2ef33c0cb993308149702f1d3836be5
 AUX lxappearance-0.4.0-linguas.patch 959 SHA256 fe2cd0b4fe018f8276075a892222eda982b11f65c69813ba5ca2b7bc202b1dee SHA512 6bff0f2a0963a4f2c4ae62a7081b04bbf0816f8a97a51028d0ee9635e1fbba4857fa56c441b77974bb779e8d9233081176ef33e7f869563e40eabcc0c34ac76b WHIRLPOOL 995e47a03ac076d7f42c68896ca37d093e0e0732a82622cffb530e33f31936bd2e764689f10b741152cf5063277283f169e72d6003844f0b02677ad691695182
 DIST lxappearance-0.5.2.tar.gz 278331 SHA256 a446aaad5572dd42845d41a20db76ca1fb1b93e3827db1bce243c9877e5996f4 SHA512 b08adf0cb9e5d3efe2d6be05c3fef99f18be6b4f85497951c111fde76010351b6265ea162acd8920ebb382c660d29d45a0a0bf601757d29739c8394b1328c0d5 WHIRLPOOL 029737bc5b6de5f7d15100fd60022af218252991ce983f432e9d67237390244d3bd1e660b0f35bf453fabaecacafc1c07566e174ad504b8c1e71ca2ea1386681
 DIST lxappearance-0.5.3.tar.gz 441698 SHA256 258069e61a1c898d1a095af25e386b3fcb79dc11024e4a0d9231a4316bfd1a2d SHA512 c0ac1f7e7d77bfebd160360047f341481ab0e7b91632924dbabfe957d282986a9d719e7ab708aacc7157559bb9bfdba3e7cfdbe50c4a8eef75581da1064e3c47 WHIRLPOOL e17e6514c402f4e7a2d0803123744851062295f5069a558a0577b711c567031ca2fe7fa31ea66eaa952489df3e5c53692222510f0ffdaf2e96d4e3b830ea52ca
+DIST lxappearance-0.5.4.tar.xz 295884 SHA256 beffc2553084ad32ab7bb424b9440c606410ca584770910a1c6ce2f9812ce5e8 SHA512 3d77dff84d221834cb7c0c124f25ea7ec736c7722c6042136986bbf1263199ac38621d1bb295eae35a6d596ba8614081f0f455d5bfada2d97a5d462515ab9e60 WHIRLPOOL d06f9cbb65fd22f7a43273cc66b1109ef4a2c1393fd40df2c6f1bed10e64322161926ae467c2cd2bc04280a7d4d402819cab02e54f4f2cf82498919800fde19e
 EBUILD lxappearance-0.5.2.ebuild 590 SHA256 9b4209334ef7b817fec6f3184a1d7dd6ec156ad11c5738c21d25edbbf3cae8e3 SHA512 c0ad34f60ef897a193a7c54d7cb55175411ba02377e71b03210dffba43aea7b7e581916aa25cb94bac91180c92a4314613c8c597711b9734c7ea0de0891eb674 WHIRLPOOL e025344289d99213a5aab9c6e2f2cee938ae3d72de6cdd79488e7666d52f13c7973a70589d26c59f35b62d50bceb131eb713bbde211711b9b7b16c0956887a2e
 EBUILD lxappearance-0.5.3.ebuild 598 SHA256 2cb5ee0db8a69173014c7bd2c53b5f5be10e2bec2e9664799e1dea64f1bfb117 SHA512 9215f81a9aa9407a663a96236009ebfa63203302a9888ecae5358381451efd58a3380064e29f8f8ac2d2a75222e0bbc0a6f3662af4e3e4f30f0307d9246f550e WHIRLPOOL 621e54901e5a6741aa777d743f9821b55d7d0b4532ada4b3ddb0f091b021ec1976a2a73f25501cd1c152d2de00186976084a5b8994af5b1e1f9d5c81bd344ec7
-MISC ChangeLog 5226 SHA256 b55c4c20d9b1be95f2ee6835c1d5951db641c9c8ec8aac7ba0b7305afdaf0fca SHA512 5ef7c2b667fc48dfd39a59906a53bfc36086275fa061345a5efb49dedb6adcd10a6e3d8cea92937bbc25b13704b23bb552afc626a70c181843573a483af4a800 WHIRLPOOL 78bfccd9d24e79531709a708a41eebd2106b804f73831433e66f643301c480b9d0a2cffcb588d2f824b1991c94e1bc11dbb1b3886eb6babec98bac91ed3b0d2b
+EBUILD lxappearance-0.5.4.ebuild 681 SHA256 2f8433a939547a0201caaa9278f892dd3e5f7ea504cee35d1d5e1d4c6280217d SHA512 0c505fb589cb8141ba5ec9f073142bfb553b732da0d62634e85bfda6f4e92b2c682ee6f5ea371ff0ef1a42767a06933fe79fa4076dd51f70f728217f68579ea9 WHIRLPOOL 67d3c417083cb616278caf3d0235c698c30bc05b427ae611512b85f968ef0d76654fe88ce42cd7d511bf50324e43ce3d18b0b946aba3ecc5bf931deb85ea5078
+MISC ChangeLog 5386 SHA256 b03a60541b4002f4122440db065e61322c03483a44476df6edf80a0cfaf5ba18 SHA512 28e397462e2fdf0ca2d0340fcac4efb5e001066cb459999cad7143dcb6d937e9341bbe030b9d8e20c3a0924ac5845974aaec355368f70920f707f0d6201a5dbc WHIRLPOOL 5a9c094b8cb1958b4157ee6a35015f92300b6bd4d65b53420b6d988be0e3b2accf162a1ae6cca8a373451259337a947947dad1b880a0acffb644c1a3ae64f227
 MISC metadata.xml 159 SHA256 09574ccad15f69d5367ecbb1a491cd636fb88582f69987d2ec217109dfe8befb SHA512 b4d06538d607c5ba81e0070475cd7d0a221b19e2adf740f479398a647c97350eb6d02b7db8bde107b0c369ce0058b8f0639468c0ca519ff585c555a0bfd4a381 WHIRLPOOL f5dfee2db356573e21cdb76ebcd11a61d2dc7f2b2b8458589cdabb1b2fd21f3261d0b40144b1417d433d1078a9c31a6b4562a914068719df66dfd4563714d9ab
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSrhCdAAoJENb1ecI556suPxwQALaedSoRdy2GcqwMH2tYFSHf
-tohdEHGZvOruvpC7PEMzWb4CYXhmgr1JjAdIuVINAgxFP1Uah2EhR0AnYXhgQVjU
-RY+aw4dpldJECyYJhR9lpOMJIKFTJnLkoXuuEsYHGijW2Nqdk8gO3VDkaRVY/n2p
-2tVPn3xCqzFzWZ2LunrvylMVaje+7uzxsU/22Pp+R2uipbksqjYjtOV7wmhNc/v/
-5Xftcm5EVWNp+qpffYhqeLqvwd2w9BDnNRmAWZPiuPJxl6mYTsTUz0dJrXFxGJ7p
-PushDeAL1yag5VlWLiA5/6AJq7fDnimbLscJlsk78qTnlAFBXdbTq3mzmS1wg1EJ
-6UM9hOXFqjDjUDHWqFi+4dazjKukY5XGvdBvWOSOX7I5Wwa2jNrjv2ixM5kTOtXo
-BS6tEKZCCaQeV7ClhPbdy2I/qOwtVJkLgxa3iYQUjvEi6HNlnZR/F2imIWzToral
-Vyz36pdIamUJn2QEBPA1WR58xYZZumtJHbgTj1dd433SIUqF8mszL4acdWZPY3Xu
-O1PwPmq62PkY7cLVaPNqh64CIUjH3hwtnTlttrLXoVkCXue6s9G5hOeBlqnwJjC6
-y8ZGzkXWPPbR8BsuiGk/nLZuLhQ/wRlx8xjIWmfe4xNefojSZ08OuCEWdhfX/urF
-xDkemH7eIxHpIONlH5Dw
-=/qnB
+iQIcBAEBCAAGBQJSw50DAAoJENb1ecI556suFucQAKp36u7NCgyS/w5cCTBIkCb3
+wH3fx6i5oH1F1RJa9BaBhj7dq8yxClVYuKi82giKgzNSjvZyyp+hf3V1s9EpaT8C
+eAP7UcwU4MzA/fwYXvUwO58pkwfg2iVScIMpTKrEq3Y6iCB8LPM9c7YDm2LDLu3W
+VE/ozfog4yUBWfTNVyx3lxAH1yClEQ3x2TLKT0VznhhBYYar9lQQvKFuKKwHq4pa
+ZQoJaSnuwvjCuYsYD/gbur5H+u/8RdssjQuGys1LeJYVyFtBS93IYo/wKp7b2o5w
+wVNp43kgtXnilxb62ejPc2etHm4YJMGro9UvdLNgKHD5MVRucpqWp990//TvJStl
+hLG1eBOI9ysBT50OgFI8yDlM6/fs+mkVf+1Jld4Gw75tTCBhel7EDWyOp17JZ8tT
+WlsTS6OuiDN+erLmFXmAZie82SN1CpW4MnDcpwP67/66aZpbDdA2wMe/kwWx803T
+6e2y1FZRnoM5GbFvWZm9EpmN/7y3pXtfnVQtfbqFlhPT1bXtvV4l+eVpft4a0zYS
+78IQk7uOX4OTvNIxMz04UXfV/ZegirU5r3+d58X6tAqBfKER6gOop0XbE1JqtQlq
+STz3PFBebMUO9lkJJw1Pnbgc34yI+BgKJLZj5oMhQ5GEHXyn3DD0MmY5GbRW4LAw
+YLBQUPLJlA4mYXQPugmx
+=W9OS
 -----END PGP SIGNATURE-----
