@@ -1,0 +1,26 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/lxde-base/lxappearance/lxappearance-0.5.4.ebuild,v 1.1 2014/01/01 04:43:48 nullishzero Exp $
+
+EAPI=5
+
+DESCRIPTION="LXDE GTK+ theme switcher"
+HOMEPAGE="http://lxde.sourceforge.net"
+SRC_URI="mirror://sourceforge/lxde/${P}.tar.xz"
+
+LICENSE="GPL-3"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~ppc ~x86 ~x86-interix ~amd64-linux ~arm-linux ~x86-linux"
+IUSE="dbus"
+
+RDEPEND="x11-libs/gtk+:2
+	dbus? ( dev-libs/dbus-glib )"
+DEPEND="${RDEPEND}
+	virtual/pkgconfig
+	dev-util/intltool
+	sys-devel/gettext"
+
+src_configure() {
+	econf \
+		$(use_enable dbus)
+}
