@@ -4,21 +4,23 @@ Hash: SHA256
 DIST frescobaldi-2.0.10.tar.gz 2997537 SHA256 b30808a2377836b5fb6269c5fd61cd9e52bdfd49c1923c562adc79b9f97c80e5 SHA512 eb290678f019398ad9a6123d3065a7a126f76d84f0f012bc88e9c54514ab3043cb4549209780e89385e9c2bcafc8710c3b93010aa571419a9bd54d6d7c263252 WHIRLPOOL f70cfecca758215c42cfa8298e5eb1a38679a5225f5317ba58cdfd158eec68463f65d213fe81009294dae099e3c2ec49b44a91252cfd8e5acf95843f9fd0425e
 DIST frescobaldi-2.0.11.tar.gz 3315637 SHA256 5701838b0704fae90a3fd68ea2ada672ef3b5556a44c87f294552650a21bf321 SHA512 d54bdacdf8cd96deb19909a5ad44fc4bf5413cd61d083cbf482b30fb0deae2532db960e9bcc8e36fb2f2d281cfae358ba0772eeb333067a39af828fa4eaf619b WHIRLPOOL 87460a510f1bde66ba7a3bf94eb23abcf92e3790a40caab431f5a4c878aaf9b262f956ff7e624d87307d492f97365dee85d7f30ac52e471846734021949a7f2b
 DIST frescobaldi-2.0.12.tar.gz 3706359 SHA256 b32ffd16dea629a1655f2c1002cb81d1a0d215d81bfc7a116bfc3d11dca022e7 SHA512 28b8f94bab7fcd71d155484e8fe6939755010a311b5e8defcb59a2f388eb9c3b03ba0db30d4833c53edae45058e7aa4096b8855171c2bd087b1d7a752a8fbcc7 WHIRLPOOL 29c65b6a1182552585a2e9ae04370fd2531ad0d4931788512e14e826ae73f39e64222e73e7f91d741b2cfa8aa21e3b5e66d54bbc7bf83a00098574c513cffd74
+DIST frescobaldi-2.0.13.tar.gz 3739244 SHA256 501d2388fa7c49fc8d644caa7550463a4455a0064e2ffe469261a26dab32bee4 SHA512 2ddfc62011a43ecc14e3268716b2722610682b26a65a040a0fb29f31f6f8bc318d25479c4381c983f56a38ccc0788573dd553c496f88d2b798d55de88bbdb987 WHIRLPOOL 3847b2ccb74e6f745ef0bb4175466b206830253411ba6d3b6495e1ae35f1a5565babed6ee7dffb1cc7659441f73c7473cbb13a8bc45535248914ad233181a08c
 DIST frescobaldi-2.0.9.tar.gz 2973552 SHA256 02870d8207884daab0e725945316b2ca6168460ec9ce2af9627403f4e4bce7ed SHA512 8d1c4a1929c732eeaf1433a7a33221ffe3a1b8c5cddb3a34a49b5b113c0468c5a85efbdf77ab9831827790ead826f3d142d0c58a4dccbfab81e4358dc861512a WHIRLPOOL 7aeedbe88098869cbc7a7bab71828d8a266a538a917871df21b2f450e6a83da866c501ff19d042a174ccd2501025c8878c060067bb9ffcdbc9851bab126a0878
 EBUILD frescobaldi-2.0.10.ebuild 894 SHA256 e3ed688df33ef6c5d8908b88ab566389c21ad4e55f629ba57b613ff7d96ff178 SHA512 e09bc8bed981a74d7c4dde164240e90229db78fa9f67b36855f6dfef215774913420d96de6425e6060a597c1582a2c970926c35f6cba11900eafb7f9f1b67d33 WHIRLPOOL 5e245fad6950b54bb61009d6803f85c837f7f882b605ee2f63d7e54bce718c96dabee2a0302031f5ac99a26d31d9fe25b870d97878661df967ff7de92ed9e89a
 EBUILD frescobaldi-2.0.11.ebuild 915 SHA256 e2b9caf7fc8429b9efc892c9e6ba3327625aeebcaabf4a0eb39d2fd2daf6522f SHA512 5b9ddc2defc97ad46b1d5f1272d2a293593e3e557dcb54ed5329f489c85663a262f4ab03a4f6b8276232e5c60b1a6865bfcb037c19f42f4df9c76337eb6cd786 WHIRLPOOL 6b0a7f0ded75f7bbb0fd2907abf47cc1682f7c84def4b8cee570260c346c20e5b99d4c6f867afc94a05379e870e124ce1e3cf8b763f2356f4e83aa527850b527
 EBUILD frescobaldi-2.0.12.ebuild 915 SHA256 80db31e6b3b8c2011be7412e1ef8c55191a442c7dc354ad061784ce80371ff03 SHA512 da442d60d9b8439f10d18a7442d1ffd0dcf6b376213514dd2a1c94470643ddd6b9feeaec1aefe441a3b24ba7f0fa0ad8e52901bef99028a2488de9070e9097c6 WHIRLPOOL d8b7d7e2b412095e2b2fc91ea0d593e4763e7ac4bb3feceef1d1350a7db59247dbcc596249670ba89a79dc861f3ea9a477e622ac9a5e1a2aa9ab7e8c92e0bab2
+EBUILD frescobaldi-2.0.13.ebuild 915 SHA256 79d5c60fae8735fd9302c861750ed28c763c22aff54ec8b598e186c405e0ce58 SHA512 b21085c4b41783e77c080b895ff97ba47ace7827bdedc182fa9421df57a9bb54db45d41a8ea1069e709c0c2e775ba2b5e6dae5206ab9049af19ab5b26e53d03a WHIRLPOOL 960434f8e21a2259da5b0702e9cc46c9a46f9c53ab384fbd2f90357c17860a81a7f58289b39a4b7f8da8deacdd62889238992e5e1f5636afe324c021b2e8a52e
 EBUILD frescobaldi-2.0.9.ebuild 893 SHA256 e02873666e9f9544e4db5e666c026c2ad66df9875e4980a5113a795b45bdd0bf SHA512 9a76580d8dcf316b949ef2150fe9b02e1567b0a7ff1118f1f3e500a2c39cabad53e0b943f47b7e3027cfb5642956e95c1e1f08d0f11c37835e9df12add494483 WHIRLPOOL 6a1af44d877ffa894048fc7779ab4d49133f22a5e67e7cce353483d80ed47c38fc96ccc7284f6ce0dda288ee0d496a44b6902a15f3a0a070d0ab6b442be71f7a
-MISC ChangeLog 3269 SHA256 16be0987adcab4f2f8fc3f431a06a6a0b826e237cd512cb60309a0fa7a303bc3 SHA512 d96a42add206c5ac854b9ac2614d21b20918a1ff48fa2a5f1f9967aba7fe7ac525fccddc76c55c4a1be13310025fee8ff0bf86b224ed80da8255feea5ebf09b1 WHIRLPOOL 936c9fb260fbf557e77c0c5f9963fb8619b577e47af8b6272fcb45af9bfbd14e9926d9e3675c8c129cb89fc593b23c88923845d026699a0bb7dd157dd368909b
+MISC ChangeLog 3398 SHA256 085806f2dbeae8e6f85042a30e6885fccfc0707914319f7c5f2c0d0ca84f29a0 SHA512 9aeb794087b521941a2a2f066e6654a236fe5af595866582d1e30f0fceafabf83256fa25cd916e51bdf74bc5a1e3d534a8196fbc783581d3b95cc4c5e930625e WHIRLPOOL 85d5746b259cadb5ad6e0ca8884ae60074c638cf043d7d82db2d8da1e0c4fee171228f9f58ebe8dc1ee3a68b9efbece4034b4733335a45baaecd681b5885b4fe
 MISC metadata.xml 278 SHA256 5f5939f0ff55f6e8c9220b7de246d84d110b7690fc9b40f715364823abd531fa SHA512 8945ace7d7b61a38ae07527f8e1c927dc5fd02d342e879123660a67178000d8793778a37baebb8b381549c11783577d479eaba642890aeb1313a3119e7a55b2f WHIRLPOOL 0ae75fa5bf43a78c990760ce599edcd2e9a484bd2c05ef63b0143cdbf52d3ed9ed750cb685f5b3136a3b6fc13a960767eb14d572436b6d97d2bc26792aef2f81
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSvUE3AAoJEEqz6FtPBkyjETcH/2nJFdfDagYe8F1rijE552jg
-OZtOF1wGRyNfkmQZ0MJXjZNVpAHocp9XC8vTGCgjmqraqoCq0eTCYV2DHl0sL3Dr
-eBzrqNBxqb7CweVN8Z+009bekJrUhtaPBvaH8z8lMGK3j2iNGpdPTFa+gl792XVG
-immRH5qIV6F65MxyVtEDKjmB3829XhGTXopLY7o4WuzDIUt3qj/BdbOpLTJyLDQ1
-Ff/fQlMwasncraSPI5fOzeUqUanqVNe/KPPH6LxuV550EB46nByQel7nt3AMHUgA
-nOtqTcA0d1q/7kepVPj34jmJCUQIITFhJzXLOwtjRDiJl8b/d6CRam85kEMF0Ko=
-=sWPh
+iQEcBAEBCAAGBQJSw6LIAAoJEEqz6FtPBkyjMGgIAI53bDUwxXE2jLa1dcweHx3s
+fIlRbULb//6Ng7v2N1ARma/jxkgwSbVXkQIl6PlsvFiHVyTTRyBd5aSEjX85qcca
+if/2NNDKfLuchs2PnBo+jm04zODY1UYyD5p3bb67uDtBxYxzA4Ifpnm4iT63HGdg
+MS2qHpflSPXIETOPCjZaVaaM0WjvrFIf9adKLrx0nTQzITcIR3KOTiMkpRADwE1m
+4K2TE1Oye7kRC0ur3rq3oyXMzVp47Ko3U/ItYjmES0mX0ZXZ9/0fi6HakNSDifnE
+NaVJOgaQvGLjwVwhAf1ro2YdkcOdPIGyhq/Z0yv1tgVu/HtQ+zvb0q7JgA8uCUE=
+=vnRw
 -----END PGP SIGNATURE-----
