@@ -1,0 +1,12 @@
+DEFINED_PHASES=configure
+DEPEND=x11-libs/gtk+:2 dbus? ( dev-libs/dbus-glib ) virtual/pkgconfig dev-util/intltool sys-devel/gettext
+DESCRIPTION=LXDE GTK+ theme switcher
+EAPI=5
+HOMEPAGE=http://lxde.sourceforge.net
+IUSE=dbus
+KEYWORDS=~alpha ~amd64 ~arm ~ppc ~x86 ~x86-interix ~amd64-linux ~arm-linux ~x86-linux
+LICENSE=GPL-3
+RDEPEND=x11-libs/gtk+:2 dbus? ( dev-libs/dbus-glib )
+SLOT=0
+SRC_URI=mirror://sourceforge/lxde/lxappearance-0.5.4.tar.xz
+_md5_=4634e0e0b11b4fd450a4a6ba91f2c81f
