@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/frescobaldi
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/frescobaldi/ChangeLog,v 1.22 2013/12/27 08:58:28 radhermit Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/frescobaldi/ChangeLog,v 1.23 2014/01/01 05:08:20 radhermit Exp $
+
+*frescobaldi-2.0.13 (01 Jan 2014)
+
+  01 Jan 2014; Tim Harder <radhermit@gentoo.org> +frescobaldi-2.0.13.ebuild:
+  Version bump.
 
 *frescobaldi-2.0.12 (27 Dec 2013)
 
